<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        style="@style/TextHuge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goeuro" />

    <co.uk.goeuro.SuggestionAutoCompleteTextView
        android:id="@+id/departureTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/departue"
        android:imeOptions="actionSearch" />

    <co.uk.goeuro.SuggestionAutoCompleteTextView
        android:id="@+id/arrivalTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/arrival"
        android:imeOptions="actionSearch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dateTextView"
            style="@style/ListItemTheme"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/texview_background"
            android:padding="@dimen/default_margin" />

        <Button
            android:id="@+id/changeDate"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/changeDate" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/texview_background" />

    <Button
        android:id="@+id/search"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/search" />

</LinearLayout>